stylesheets/_modules.scss
/* ... */
.module-notification--with-click-handler {
  cursor: pointer;
}

.module-notification__icon {
  height: 24px;
  width: 24px;
  margin-inline: auto;
}

// Module: In Contacts Icon

.module-in-contacts-icon__icon {
  display: inline-block;
  height: 14px;
  width: 14px;

  margin-bottom: 2px;
  vertical-align: middle;

  @include mixins.light-theme {
    @include mixins.color-svg(
      '../images/icons/v3/person/person-circle-compact.svg',
      variables.$color-gray-60
    );
  }
  @include mixins.dark-theme {
    @include mixins.color-svg(
      '../images/icons/v3/person/person-circle-compact.svg',
      variables.$color-gray-25
    );
  }

  @include mixins.keyboard-mode {
    &:focus {
      @include mixins.color-svg(
        '../images/icons/v3/person/person-circle-compact.svg',
        variables.$color-ultramarine
      );
    }
  }
}

// Module: Conversation Details

.conversation-details-panel {
  max-width: 750px;
  margin-block: 0;
  margin-inline: auto;
  user-select: none;

  @at-root .conversation #{&} {
    overflow-y: auto;
  }
}

// Brought this up here to add specificity
button.ConversationDetails__action-button {
  margin-inline-start: 16px;
}

// Module: Message Request Actions

.module-message-request-actions {
  padding-block: 8px 12px;
  padding-inline: 16px;

  @include mixins.light-theme {
    background: variables.$color-white;
  }

  @include mixins.dark-theme {
    background: variables.$color-gray-95;
  }

  &__message {
    @include mixins.font-body-2;
    text-align: center;
    margin-bottom: 12px;

    @include mixins.light-theme {
      color: variables.$color-gray-60;
    }

    @include mixins.dark-theme {
      color: variables.$color-gray-25;
    }

    &__name {
      @include mixins.font-body-2-bold;
    }

    &__learn-more {
      text-decoration: none;
    }
  }

  &__buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;

    .module-Button {
      min-width: 80px;

      &:not(:last-of-type) {
        margin-inline-end: 8px;
      }
    }
  }
}

// Module: Image

// Discord-like: images with rounded corners, constrained size
.module-image {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  border-radius: 8px;
  overflow: hidden;
  max-width: 550px;
  max-height: 350px;
}

.module-image--hidden {
  visibility: hidden;
}

.module-image--tap-to-play,
.module-image--not-downloaded {
  align-items: center;
  display: flex;
  justify-content: center;

  span {
    align-items: center;
    display: flex;
    justify-content: center;
    border-radius: 50px;
    height: 50px;
    width: 50px;
    background-color: variables.$color-black-alpha-70;
  }

  &:hover {
    span {
      background-color: variables.$color-black-alpha-80;
    }
  }

  &:focus {
    span {
      background-color: variables.$color-gray-75;
      border: 4px solid variables.$color-ultramarine;
      box-sizing: border-box;
      outline: none;
    }
  }
}

.module-image--not-downloaded {
  span:after {
    content: '';
    height: 24px;
    width: 24px;

    @include mixins.color-svg(
      '../images/icons/v3/arrow/arrow-down.svg',
      variables.$color-white
    );
  }
}

.module-image--tap-to-play {
  span:after {
    display: flex;
    flex-direction: column;
    align-items: center;

    content: 'GIF';

    @include mixins.font-body-1;
    color: variables.$color-white;
  }
}

.module-image__progress-circle-wrapper {
  @include mixins.position-absolute-center;
}

.module-image__spinner-container {
  @include mixins.position-absolute-center;

  .module-image-spinner {
    &__arc {
      background-color: variables.$color-black-alpha-80;
    }

    &__circle {
      background-color: variables.$color-white;
    }

    @include mixins.dark-theme {
      &__arc {
        background-color: variables.$color-black-alpha-80;
      }
    }
  }
}

.module-image--with-background {
  @include mixins.light-theme {
    background-color: variables.$color-white;
  }
  @include mixins.dark-theme {
    background-color: variables.$color-black;
  }
}

.module-image__caption-icon {
  position: absolute;
  top: 6px;
  inset-inline-start: 6px;
}

.module-image--cropped {
  overflow: hidden;
}

.module-image__border-overlay {
  @include mixins.button-reset;
  & {
    width: 100%;
    cursor: inherit;
    pointer-events: none;

    position: absolute;
    top: 0;
    bottom: 0;
    inset-inline: 0;
    z-index: variables.$z-index-above-base;
  }
}

.module-image__border-overlay--with-click-handler {
  cursor: pointer;
  pointer-events: all;
}

.module-image__border-overlay--with-border {
  @include mixins.light-theme {
    box-shadow: inset 0px 0px 0px 1px variables.$color-black-alpha-085;
  }
  @include mixins.dark-theme {
    box-shadow: inset 0px 0px 0px 1px variables.$color-white-alpha-20;
  }
}

.module-image--gif {
  video {
    cursor: pointer;
    object-fit: cover;
  }
}

button.module-image__border-overlay:focus {
  @include mixins.keyboard-mode {
    box-shadow: inset 0px 0px 0px 2px variables.$color-ultramarine;
  }
}

.module-image__border-overlay--dark {
  background-color: variables.$color-black-alpha-20;
}

.module-image__loading-placeholder {
  display: inline-flex;
  flex-direction: row;
  align-items: center;

  @include mixins.light-theme {
    background-color: variables.$color-black-alpha-20;
  }
  @include mixins.dark-theme {
    background-color: variables.$color-white-alpha-20;
  }
}

.module-image__image {
  object-fit: cover;
  // redundant with attachment-container, but we get cursor flashing on move otherwise
  cursor: pointer;
}
/* ... */

